Nouvelles images poissons + changement image selon direction du poisson+ amélioration barreBoost

--- a/AquaSurvivor/AquaSurvivor.csproj
+++ b/AquaSurvivor/AquaSurvivor.csproj
@@ -33,24 +33,61 @@
     <None Remove="img\Nourriture\imgPerle.png" />
     <None Remove="img\Nourriture\imgPoissonJaune.png" />
     <None Remove="img\Nourriture\imgSardine.png" />
+    <None Remove="img\Poissons\imgPoisson1BasDroite.png" />
+    <None Remove="img\Poissons\imgPoisson1BasGauche.png" />
     <None Remove="img\Poissons\imgPoisson1Droite.png" />
+    <None Remove="img\Poissons\imgPoisson1Droite.png.~tmp" />
     <None Remove="img\Poissons\imgPoisson1Gauche.png" />
+    <None Remove="img\Poissons\imgPoisson1HautDroite.png" />
+    <None Remove="img\Poissons\imgPoisson1HautGauche.png" />
+    <None Remove="img\Poissons\imgPoisson2BasDroite.png" />
+    <None Remove="img\Poissons\imgPoisson2BasGauche.png" />
     <None Remove="img\Poissons\imgPoisson2Droite.png" />
     <None Remove="img\Poissons\imgPoisson2Gauche.png" />
+    <None Remove="img\Poissons\imgPoisson2HautDroite.png" />
+    <None Remove="img\Poissons\imgPoisson2HautGauche.png" />
+    <None Remove="img\Poissons\imgPoisson3BasDroite.png" />
+    <None Remove="img\Poissons\imgPoisson3BasGauche.png" />
     <None Remove="img\Poissons\imgPoisson3Droite.png" />
     <None Remove="img\Poissons\imgPoisson3Gauche.png" />
+    <None Remove="img\Poissons\imgPoisson3HautDroite.png" />
+    <None Remove="img\Poissons\imgPoisson3HautGauche.png" />
+    <None Remove="img\Poissons\imgPoisson4BasDroite.png" />
+    <None Remove="img\Poissons\imgPoisson4BasGauche.png" />
     <None Remove="img\Poissons\imgPoisson4Droite.png" />
     <None Remove="img\Poissons\imgPoisson4Gauche.png" />
+    <None Remove="img\Poissons\imgPoisson4HautDroite.png" />
+    <None Remove="img\Poissons\imgPoisson4HautGauche.png" />
+    <None Remove="img\Poissons\imgPoisson5BasDroite.png" />
+    <None Remove="img\Poissons\imgPoisson5BasGauche.png" />
     <None Remove="img\Poissons\imgPoisson5Droite.png" />
     <None Remove="img\Poissons\imgPoisson5Gauche.png" />
+    <None Remove="img\Poissons\imgPoisson5HautDroite.png" />
+    <None Remove="img\Poissons\imgPoisson5HautGauche.png" />
+    <None Remove="img\Poissons\imgPoisson6BasDroite.png" />
+    <None Remove="img\Poissons\imgPoisson6BasGauche.png" />
     <None Remove="img\Poissons\imgPoisson6Droite.png" />
     <None Remove="img\Poissons\imgPoisson6Gauche.png" />
+    <None Remove="img\Poissons\imgPoisson6HautDroite.png" />
+    <None Remove="img\Poissons\imgPoisson6HautGauche.png" />
+    <None Remove="img\Poissons\imgPoisson7BasDroite.png" />
+    <None Remove="img\Poissons\imgPoisson7BasGauche.png" />
     <None Remove="img\Poissons\imgPoisson7Droite.png" />
     <None Remove="img\Poissons\imgPoisson7Gauche.png" />
+    <None Remove="img\Poissons\imgPoisson7HautDroite.png" />
+    <None Remove="img\Poissons\imgPoisson7HautGauche.png" />
+    <None Remove="img\Poissons\imgPoisson8BasDroite.png" />
+    <None Remove="img\Poissons\imgPoisson8BasGauche.png" />
     <None Remove="img\Poissons\imgPoisson8Droite.png" />
     <None Remove="img\Poissons\imgPoisson8Gauche.png" />
+    <None Remove="img\Poissons\imgPoisson8HautDroite.png" />
+    <None Remove="img\Poissons\imgPoisson8HautGauche.png" />
+    <None Remove="img\Poissons\imgPoisson9BasDroite.png" />
+    <None Remove="img\Poissons\imgPoisson9BasGauche.png" />
     <None Remove="img\Poissons\imgPoisson9Droite.png" />
     <None Remove="img\Poissons\imgPoisson9Gauche.png" />
+    <None Remove="img\Poissons\imgPoisson9HautDroite.png" />
+    <None Remove="img\Poissons\imgPoisson9HautGauche.png" />
     <None Remove="img\Poissons\imgPoissonChatDroite.png" />
     <None Remove="img\Poissons\imgPoissonChatGauche.png" />
   </ItemGroup>
@@ -80,24 +117,61 @@
     <Resource Include="img\Nourriture\imgPerle.png" />
     <Resource Include="img\Nourriture\imgPoissonJaune.png" />
     <Resource Include="img\Nourriture\imgSardine.png" />
+    <Resource Include="img\Poissons\imgPoisson1BasDroite.png" />
+    <Resource Include="img\Poissons\imgPoisson1BasGauche.png" />
     <Resource Include="img\Poissons\imgPoisson1Droite.png" />
+    <Resource Include="img\Poissons\imgPoisson1Droite.png.~tmp" />
     <Resource Include="img\Poissons\imgPoisson1Gauche.png" />
+    <Resource Include="img\Poissons\imgPoisson1HautDroite.png" />
+    <Resource Include="img\Poissons\imgPoisson1HautGauche.png" />
+    <Resource Include="img\Poissons\imgPoisson2BasDroite.png" />
+    <Resource Include="img\Poissons\imgPoisson2BasGauche.png" />
     <Resource Include="img\Poissons\imgPoisson2Droite.png" />
     <Resource Include="img\Poissons\imgPoisson2Gauche.png" />
+    <Resource Include="img\Poissons\imgPoisson2HautDroite.png" />
+    <Resource Include="img\Poissons\imgPoisson2HautGauche.png" />
+    <Resource Include="img\Poissons\imgPoisson3BasDroite.png" />
+    <Resource Include="img\Poissons\imgPoisson3BasGauche.png" />
     <Resource Include="img\Poissons\imgPoisson3Droite.png" />
     <Resource Include="img\Poissons\imgPoisson3Gauche.png" />
+    <Resource Include="img\Poissons\imgPoisson3HautDroite.png" />
+    <Resource Include="img\Poissons\imgPoisson3HautGauche.png" />
+    <Resource Include="img\Poissons\imgPoisson4BasDroite.png" />
+    <Resource Include="img\Poissons\imgPoisson4BasGauche.png" />
     <Resource Include="img\Poissons\imgPoisson4Droite.png" />
     <Resource Include="img\Poissons\imgPoisson4Gauche.png" />
+    <Resource Include="img\Poissons\imgPoisson4HautDroite.png" />
+    <Resource Include="img\Poissons\imgPoisson4HautGauche.png" />
+    <Resource Include="img\Poissons\imgPoisson5BasDroite.png" />
+    <Resource Include="img\Poissons\imgPoisson5BasGauche.png" />
     <Resource Include="img\Poissons\imgPoisson5Droite.png" />
     <Resource Include="img\Poissons\imgPoisson5Gauche.png" />
+    <Resource Include="img\Poissons\imgPoisson5HautDroite.png" />
+    <Resource Include="img\Poissons\imgPoisson5HautGauche.png" />
+    <Resource Include="img\Poissons\imgPoisson6BasDroite.png" />
+    <Resource Include="img\Poissons\imgPoisson6BasGauche.png" />
     <Resource Include="img\Poissons\imgPoisson6Droite.png" />
     <Resource Include="img\Poissons\imgPoisson6Gauche.png" />
+    <Resource Include="img\Poissons\imgPoisson6HautDroite.png" />
+    <Resource Include="img\Poissons\imgPoisson6HautGauche.png" />
+    <Resource Include="img\Poissons\imgPoisson7BasDroite.png" />
+    <Resource Include="img\Poissons\imgPoisson7BasGauche.png" />
     <Resource Include="img\Poissons\imgPoisson7Droite.png" />
     <Resource Include="img\Poissons\imgPoisson7Gauche.png" />
+    <Resource Include="img\Poissons\imgPoisson7HautDroite.png" />
+    <Resource Include="img\Poissons\imgPoisson7HautGauche.png" />
+    <Resource Include="img\Poissons\imgPoisson8BasDroite.png" />
+    <Resource Include="img\Poissons\imgPoisson8BasGauche.png" />
     <Resource Include="img\Poissons\imgPoisson8Droite.png" />
     <Resource Include="img\Poissons\imgPoisson8Gauche.png" />
+    <Resource Include="img\Poissons\imgPoisson8HautDroite.png" />
+    <Resource Include="img\Poissons\imgPoisson8HautGauche.png" />
+    <Resource Include="img\Poissons\imgPoisson9BasDroite.png" />
+    <Resource Include="img\Poissons\imgPoisson9BasGauche.png" />
     <Resource Include="img\Poissons\imgPoisson9Droite.png" />
     <Resource Include="img\Poissons\imgPoisson9Gauche.png" />
+    <Resource Include="img\Poissons\imgPoisson9HautDroite.png" />
+    <Resource Include="img\Poissons\imgPoisson9HautGauche.png" />
   </ItemGroup>
 
 </Project>
